foldermodel: delete previous qfilesystemwatcher

lest we leak the previous pointer

BUG: 507239
(cherry picked from commit 3778406f985a169ffec95768e476f8daf9281a53)